[gd_scene load_steps=13 format=2]

[ext_resource path="res://Recursos/Enemies/wingMan2.png" type="Texture" id=1]
[ext_resource path="res://Recursos/Enemies/wingMan3.png" type="Texture" id=2]
[ext_resource path="res://Recursos/Enemies/wingMan4.png" type="Texture" id=3]
[ext_resource path="res://Juego/Enemigos/Volador.gd" type="Script" id=4]
[ext_resource path="res://Recursos/Enemies/wingMan7.png" type="Texture" id=5]
[ext_resource path="res://Recursos/Enemies/wingMan1.png" type="Texture" id=6]
[ext_resource path="res://Recursos/Enemies/wingMan5.png" type="Texture" id=7]
[ext_resource path="res://Recursos/Sounds FX/salto_chico.wav" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Muerte",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 6 ) ],
"loop": true,
"name": "Volando",
"speed": 18.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 43.912, 39.321 )

[sub_resource type="CircleShape2D" id=3]
radius = 27.767

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32.6252, 32.8459 )

[node name="Volador" type="KinematicBody2D" groups=[
"Enemigos",
]]
scale = Vector2( 0.6, 0.6 )
z_index = 35
z_as_relative = false
collision_layer = 16
collision_mask = 8
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -17.2524 )
frames = SubResource( 1 )
animation = "Volando"
frame = 8

[node name="DetectorJugadorConCuerpo" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8

[node name="ColisionConJugador" type="CollisionShape2D" parent="DetectorJugadorConCuerpo"]
position = Vector2( 0, 6.73751 )
shape = SubResource( 2 )

[node name="DetectorJugadorConCabeza" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8

[node name="ColisionConCabeza" type="CollisionShape2D" parent="DetectorJugadorConCabeza"]
modulate = Color( 1, 0, 1, 1 )
position = Vector2( 0.147915, -31.9043 )
shape = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "Efectos"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="DetectorJugadorConCuerpo" to="." method="_on_DetectorJugadorConCuerpo_body_entered"]
[connection signal="body_entered" from="DetectorJugadorConCabeza" to="." method="_on_DetectorJugadorConCabeza_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
